Change background color of banner to fix contrast error with tagline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ nav {
 /* Main Header Section - Banner */
 
 #main-header-section {
-    background-color: #70BCC7;
+    background-color: #134952;
     background-image: url("../media/images/banner-bg.jpg");
     background-size: 100%;
     background-position: center;
